雪を降らせました一部に

--- a/index.html
+++ b/index.html
@@ -1,70 +1,85 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-   <meta charset="utf-8">
-   <title>今田優希のポートフォリオ！</title>
-   <meta name="description" content="今田のポートフォリオです">
-   <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
+
+<head>
+    <meta charset="utf-8">
+    <title>今田優希のポートフォリオ！</title>
+    <meta name="description" content="今田のポートフォリオです">
+    <link rel="stylesheet" href="css/styles.css">
+    <script type="text/javascript" src="sample.js"></script>
+</head>
+
+<body>
     <div class="border-top"></div>
     <div class="border-left"></div>
     <div class="border-right"></div>
     <div class="border-bottom"></div>
     <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="index.html">
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">
               HOME
             </a>
-          </li>
-          <li>
-            <a href="https://www.google.com/?hl=ja">
+                </li>
+                <li>
+                    <a href="https://www.google.com/?hl=ja">
               GALLERY(建設予定)
             </a>
-          </li>
-          <li>
-            <a href="mailto:58desuyo@gmail.com" target="_blank">
+                </li>
+                <li>
+                    <a href="mailto:58desuyo@gmail.com" target="_blank">
               MAIL
               <!-- <img src="img/letter.png" width="30" height="30" alt="メール送信"> -->
             </a>
-          </li>
-        </ul>
-      </nav>
+                </li>
+            </ul>
+        </nav>
     </header>
     <div class="works">
 
-      <div class="pict">
-        <img class="neko" src="img/qoo.jpg" width="300" height="300" alt="家族">
-      </div>
-      <div class="myname">
-        <p>Imada Yuki</p>
-        <h1>今田 優希</h1>
-        <p>絶賛HTMLとCSS勉強中です。</p>
-        <p>JavaScriptはどうにも間に合わなかった...</p>
-      </div>
-      <!-- <section>
+        <div class="pict">
+            <img class="neko" src="img/qoo.jpg" width="300" height="300" alt="家族">
+        </div>
+        <div class="myname">
+            <p>Imada Yuki</p>
+            <p>絶賛HTMLとCSS勉強中です。</p>
+            <p>JavaScriptはどうにも間に合わなかった...</p>
+        </div>
+        <!-- <section>
       <img src="img/sea.jpg" width="140" height="140" alt="海">
       </section> -->
 
-      <!-- <section>
+        <!-- <section>
         <img src="img/neko1.jpg" width="400"  alt="可愛い猫">
       <p></p>
       </section> -->
 
-      <!-- <section>
+        <!-- <section>
         <img src="img/neko2.jpg" width="400" alt="猫・猫">
         <p></p>
       </section> -->
 
-      <!-- <section>
+        <!-- <section>
         <img src="img/neko3.jpg" width="400" alt="猫アレルギー">
         <p></p>
       </section> -->
     </div>
+    <section id="snow">
+        <div class="inner">
+            <div class="flake1"></div>
+            <div class="flake2"></div>
+            <div class="flake3"></div>
+            <div class="flake4"></div>
+            <div class="flake5"></div>
+            <div class="flake6"></div>
+            <div class="flake7"></div>
+            <div class="flake8"></div>
+        </div>
+    </section>
+
     <footer>
-      <!-- <ul>
+        <!-- <ul>
         <li>
           <a href="mailto:58desuyo@gmail.com" target="_blank">
             <img src="img/letter.png" width="30" height="30" alt="メール送信">
@@ -81,8 +96,9 @@
           </a>
         </li>
       </ul> -->
-      <p>(c) Yuki Imada</p>
+        <p>(c) Yuki Imada</p>
     </footer>
 
-  </body>
+</body>
+
 </html>
